# rust_gui_test_project

./: Cargo.toml  README.md
scrips/: run_immediate_mode.ps1  run_retained_mode.ps1
src/: common.rs  immediate_mode_app.rs  main.rs  retained_mode_app.rs
