[package]
name = "gui_test_project"
version = "0.1.0"
edition = "2021"


[features]
# Define modes as features, only one can be active at a time.
immediate-mode = ["eframe", "egui", "winapi"]
retained-mode  = ["iced"]

# Set the default feature to immediate-mode for now
#default = ["immediate-mode"]
default = ["retained-mode"]


[dependencies]
# Commond dependencies
rand = "0.8.5"
# Immediate Mode Dependencies (eframe and egui)
egui = {version = "0.29", optional = true }
eframe = {version = "0.29", optional = true  }
winapi = { version = "0.3", features = ["winuser"], optional = true }

# Retained Mode Dependencies (iced can be added here)
iced = { version = "0.10", optional = true }
